# stepanov

./: .gitignore  CMakeLists.txt  README.md  runbuild
.circleci/: config.yml
cmake/: UnitTest.cmake
src/: CMakeLists.txt
src/EofP/: CMakeLists.txt
src/EofP/chapter_02/: Transformations.h
src/EofP/chapter_06/: Iterators.h
src/EofP/chapter_07/: CoordinateStructures.h
test/EofP/: CMakeLists.txt
test/EofP/chapter_02/: CMakeLists.txt  TransformationsTest.cpp
test/EofP/chapter_06/: CMakeLists.txt  IteratorsTest.cpp
test/EofP/chapter_07/: CMakeLists.txt  CoordinateStructuresTest.cpp
